--- a/promociones.html
+++ b/promociones.html
@@ -41,5 +41,21 @@
   <a href="index.html">⬅️ Volver a la página principal</a>
 </div>
 
+<script>
+  function agregarPromo(nombrePromo, precioPromo, contenidoPromo) {
+    let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+
+    carrito.push({
+      nombre: "PROMO: " + nombrePromo,
+      precio: precioPromo,
+      cantidad: 1,
+      detalle: contenidoPromo
+    });
+
+    localStorage.setItem("carrito", JSON.stringify(carrito));
+    alert("Promo agregada al carrito ✅");
+  }
+
+
 </body>
 </html>
