--- a/promociones.html
+++ b/promociones.html
@@ -55,7 +55,7 @@
     localStorage.setItem("carrito", JSON.stringify(carrito));
     alert("Promo agregada al carrito ✅");
   }
-
+</script>
 
 </body>
 </html>
