--- a/promociones.html
+++ b/promociones.html
@@ -25,14 +25,18 @@
   <h4>Combo Skincare x3</h4>
   <p>Incluye: limpiador, tónico y serum</p>
   <p>Precio: $8500</p>
-  <button onclick="agregarPromo('Combo Skincare x3', 8500, 'Limpiador, Tónico, Serum')">Agregar al carrito</button>
+<button class="boton-agregar" onclick="agregarPromo('Combo Skincare x3', 8500, 'Limpiador, Tónico, Serum')">
+  🛒 Agregar al carrito
+</button>
 </div>
 
 <div class="promo">
   <h4>Pack Maquillaje Profesional</h4>
   <p>Incluye: base, labial, paleta de sombras</p>
   <p>Precio: $6900</p>
-  <button onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">Agregar al carrito</button>
+<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">
+  🛒 Agregar al carrito
+</button>
 </div>
 
     <!-- Agregá más promos acá -->
