--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     background-color: #e91e63;
   }
 </style>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
