--- a/carrito.html
+++ b/carrito.html
@@ -40,7 +40,6 @@
     </div>
   </section>
 
-<form id="form-carrito" class="formulario-compra" style="display:none;">
   <h3>Datos personales</h3>
 
   <div class="campo">
@@ -195,6 +194,9 @@ function continuarCompra() {
     window.scrollTo(0, document.body.scrollHeight);
   }
 </script>
+<form id="form-carrito" ...>
+  <!-- campos del formulario -->
+</form>
 
 <script src="https://cdn.emailjs.com/sdk/3.11.0/email.min.js"></script>
 <script>
