--- a/carrito.html
+++ b/carrito.html
@@ -194,7 +194,7 @@ function continuarCompra() {
     window.scrollTo(0, document.body.scrollHeight);
   }
 </script>
-<form id="form-carrito" ...>
+<form id="form-carrito" style="display:none;">
   <!-- campos del formulario -->
 </form>
 
