--- a/carrito.html
+++ b/carrito.html
@@ -24,6 +24,7 @@
       background-color: #c0392b;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
  <section class="banner-promos">
@@ -209,8 +210,13 @@ function continuarCompra() {
 
     emailjs.sendForm('service_e2dcwiw', 'template_0wi0hpz', this)
       .then(function() {
-        alert('✅ Compra enviada con éxito');
-      }, function(error) {
+Swal.fire({
+  title: '¡Compra enviada con éxito!',
+  text: 'Gracias por tu pedido ✨',
+  icon: 'success',
+  confirmButtonText: 'Aceptar',
+  confirmButtonColor: '#d63384' // rosa Glowzza
+});      }, function(error) {
         alert('❌ Error al enviar: ' + JSON.stringify(error));
       });
   });
