--- a/carrito.html
+++ b/carrito.html
@@ -184,7 +184,7 @@ function continuarCompra() {
 </div>
 
 <div class="campo">
-  <label for="email">Correo electrónico</label>
+  <label for="email">Correo electrónico (opcional)</label>
   <input type="email" name="user_email" id="email">
 </div>
 
