--- a/promociones.html
+++ b/promociones.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="promo">
-  <h4>Pack Maquillaje Profesional</h4>
+  <h4>Pack Maquillaje</h4>
   <p>Incluye: base, labial, paleta de sombras</p>
   <p>Precio: $6900</p>
 <button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">
