--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
     <h1>Contacto</h1>
     <h4>Estamos en la zona de Benavídez.</h4>
     <p><strong>WhatsApp:</strong> 11 71019084</p>
-    <p><strong>Email:</strong> lucianagustinasolis.1998@gmail.com</p>
+    <p><strong>Email:</strong> glowzzaventas@gmail.com</p>
   </div>
 </section>
   <!-- Footer -->
