--- a/carrito.html
+++ b/carrito.html
@@ -34,7 +34,8 @@
 
   <section class="carrito">
     <h1>Tu carrito</h1>
-    <div id="lista-carrito"></div>
+    <div id="lista-carrito">
+    </div>
     <div class="resumen">
       <p><strong>Total:</strong> $<span id="total-carrito">0</span></p>
 <button onclick="mostrarFormulario()">Continuar compra</button>
