--- a/carrito.html
+++ b/carrito.html
@@ -222,5 +222,13 @@ Swal.fire({
       });
   });
 </script>
+<script>
+  const listaCarrito = document.getElementById("lista-carrito");
+
+  listaCarrito.addEventListener("click", function () {
+    listaCarrito.classList.toggle("expandido");
+  });
+</script>
+
 </body>
 </html>
