--- a/promociones.html
+++ b/promociones.html
@@ -15,7 +15,8 @@
 <div class="boton-volver">
   <a href="index.html">⬅️ Volver a la página principal</a>
 </div>
-
+   
+<!-- Agregá más promos acá -->
 
   <section class="promociones">
     <h1>Promociones Exclusivas</h1>
@@ -31,10 +32,19 @@
 </div>
 
 <div class="promo">
-  <h4>Pack Maquillaje</h4>
+  <h4>Pack Maquillaje 1</h4>
   <p>Incluye: base, labial, paleta de sombras</p>
   <p>Precio: $6900</p>
 <button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">
+  🛒 Agregar al carrito
+</button>
+</div>
+
+<div class="promo">
+  <h4>Pack Maquillaje 2</h4>
+  <p>Incluye: balsamo labial, esponjita, mascara de pestañas y delineador liquido.</p>
+  <p>Precio: $8000</p>
+<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje Profesional', 8000, 'Base, Labial, Paleta de sombras')">
   🛒 Agregar al carrito
 </button>
 </div>
