--- a/promociones.html
+++ b/promociones.html
@@ -35,7 +35,7 @@
   <h4>Pack Maquillaje 1</h4>
   <p>Incluye: base, labial, paleta de sombras</p>
   <p>Precio: $6900</p>
-<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">
+<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje', 6900, 'Base, Labial, Paleta de sombras')">
   🛒 Agregar al carrito
 </button>
 </div>
