--- a/promociones.html
+++ b/promociones.html
@@ -44,7 +44,7 @@
   <h4>Pack Maquillaje 2</h4>
   <p>Incluye: balsamo labial, esponjita, mascara de pestañas y delineador liquido.</p>
   <p>Precio: $8000</p>
-<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje 2', 8000, 'Base, Labial, Paleta de sombras')">
+<button class="boton-agregar" onclick="agregarPromo('Pack Maquillaje 2', 8000, 'balsamo labial, esponjita, mascara de pestañas y delineador liquido')">
   🛒 Agregar al carrito
 </button>
 </div>
