--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Header -->
   <header>
 <div class="social-icons">
-  <a href="https://www.facebook.com/share/17vY8SWyau/" target="_blank"><span class="material-icons">facebook</span></a>
+  <a href="https://www.facebook.com/profile.php?id=61587097079502&sfnsn=mo" target="_blank"><span class="material-icons">facebook</span></a>
   <a href="https://www.instagram.com/glowzza_make_up?utm_source=qr&igsh=cXB0dGRsdzhnaXFs" target="_blank"><span class="material-icons">photo_camera</span></a>
   <a href="https://wa.me/541171019084?text=Hola%20Glowzza,%20quiero%20más%20información" target="_blank">
   <span class="material-icons">chat</span>
@@ -576,7 +576,7 @@
   <!-- Footer -->
   <footer>
 <div class="social-icons">
-  <a href="https://www.facebook.com/share/17vY8SWyau/" target="_blank"><span class="material-icons">facebook</span></a>
+  <a href="https://www.facebook.com/profile.php?id=61587097079502&sfnsn=mo" target="_blank"><span class="material-icons">facebook</span></a>
   <a href="https://www.instagram.com/glowzza_make_up?utm_source=qr&igsh=cXB0dGRsdzhnaXFs" target="_blank"><span class="material-icons">photo_camera</span></a>
 <a href="https://wa.me/541171019084?text=Hola%20Glowzza,%20quiero%20más%20información" target="_blank">
   <span class="material-icons">chat</span>
