--- a/carrito.html
+++ b/carrito.html
@@ -25,6 +25,8 @@
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
  <section class="banner-promos">
