--- a/carrito.html
+++ b/carrito.html
@@ -171,6 +171,16 @@ function continuarCompra() {
 
     document.getElementById("form-carrito").style.display = "block";
     window.scrollTo(0, document.body.scrollHeight);
+
+    const productos = [
+    { id: "serum-vitamina-c", cantidad: 2 },
+    { id: "crema-hidratante", cantidad: 1 }
+  ];
+  const total = 13500;
+
+  guardarVenta(productos, total);
+
+
   }
 </script>
 <form id="form-carrito" style="display:none;">
@@ -236,6 +246,30 @@ Swal.fire({
     });
   });
 </script>
+
+<script>
+  function guardarVenta(productos, total) {
+    db.collection("ventas").add({
+      productos: productos,   // array de productos con id y cantidad
+      total: total,
+      fecha: new Date()
+    })
+    .then(() => {
+      console.log("✅ Venta guardada en Firestore");
+      Swal.fire({
+        title: '¡Compra enviada con éxito!',
+        text: 'Gracias por tu pedido 🛒',
+        icon: 'success',
+        confirmButtonText: 'Aceptar',
+        confirmButtonColor: '#d63384'
+      });
+    })
+    .catch((error) => {
+      alert('❌ Error al enviar: ' + JSON.stringify(error));
+    });
+  }
+</script>
+
 
 </body>
 </html>
