--- a/carrito.html
+++ b/carrito.html
@@ -207,7 +207,7 @@ function continuarCompra() {
 </div>
 
 <input type="hidden" name="productos" id="productos">
-<input type="hidden" name="total" id="total">e
+<input type="hidden" name="total" id="total">
 
 <button type="submit" class="boton-enviar">Enviar compra</button>
 </form>
