--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <a href="#maquillaje">Maquillaje</a>
   <a href="#skincare">Skincare</a>
   <a href="#contacto">Contacto</a>
+  <a href="">Cuidado personal</a>
+  <a href="">Sahumerios y esencias</a>
+  <a href="">Perfumeria</a>
+
 </nav>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
