--- a/index.html
+++ b/index.html
@@ -104,26 +104,25 @@
     <h4>Todo para tu cabello, desde el cuidado diario hasta el toque profesional que te transforma</h4>
   </div>
   <!-- productos acá -->
-</section>
     <div class="productos">
       <div class="producto">
         <img src="images/peluqueria/pl1.jpeg" alt="Labiales" onclick="abrirImagen(this)" data-descripcion="Novedoso cepillo flexible para el control de pelo enredado sin dañarlo.">
         <h4>Cepillo Anti-Frizz</h4>
         <p>$4500</p>
           <div class="boton-carrito">
-           <button onclick="agregarAlCarrito('Cepillo Anti-Frizz', 4500)" class="btn">Agregar al carrito</button>     
-           </div>
+<button onclick="abrirModal('cepillo-anti-frizz')" class="btn">Agregar al carrito</button>  
+          </div>
        </div>
       <div class="producto">
         <img src="images/peluqueria/pl2.png" alt="Labiales" onclick="abrirImagen(this)" data-descripcion="Planchita flequillera ideal para viajes por su novedosos estuche y diseño compacto de 16cm, la misma posee calentadores ceramicos equiparables a los equipos de uso profesional.">
         <h4>Planchita Flequillera.</h4>
         <p>$4000</p>
-<div class="boton-carrito">
-  <button onclick="agregarAlCarrito('Planchita Flequillera', 4000)" class="btn">Agregar al carrito</button>
-</div>    
-  </div>
+         <div class="boton-carrito">
+          <button onclick="agregarAlCarrito('Planchita Flequillera', 4000)" class="btn">Agregar al carrito</button>
+           </div>    
+          </div>
   
-    </div>
+        </div>
   </section>
 
   <!-- Sección Skincare -->
@@ -133,7 +132,7 @@
     <h4>Rutinas que nutren, protegen y revelan tu mejor piel día tras día</h4>
     <div class="boton-promocion">
   <a href="promociones.html">🔥 VER PROMOCIONES EXCLUSIVAS 🔥</a>
-</div>
+ </div>
 
   </div>
   <!-- productos de skincare acá -->
@@ -249,7 +248,7 @@
         <h4>Balsamo frutal.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-  <button onclick="agregarAlCarrito('Balsamo frutal', 1200)" class="btn">Agregar al carrito</button>
+        <button onclick="agregarAlCarrito('Balsamo frutal', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -726,5 +725,67 @@ Swal.fire({
   const db = firebase.firestore();
 </script>
 
+<script>
+
+function abrirModal(id) {
+  document.getElementById("modal-" + id).style.display = "block";
+}
+
+function cerrarModal(id) {
+  document.getElementById("modal-" + id).style.display = "none";
+}
+
+function confirmarAgregar(id, nombre, precio) {
+  const selector = document.getElementById("selector-" + id);
+  const variante = selector.value;
+
+  if (!variante) {
+    Swal.fire("Elegí una opción", "Seleccioná color o sabor antes de continuar", "warning");
+    return;
+  }
+
+  const carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+  carrito.push({
+    id: id + "-" + variante,
+    nombre: nombre + " (" + variante + ")",
+    precio: precio,
+    cantidad: 1
+  });
+
+  localStorage.setItem("carrito", JSON.stringify(carrito));
+  mostrarCarrito();
+  cerrarModal(id);
+
+  Swal.fire("Agregado", "Producto añadido al carrito", "success");
+}
+</script>
+
+<div id="modal-cepillo-anti-frizz" class="modal modal-producto" style="display:none;">
+  <div class="modal-contenido">
+    
+    <h2>Cepillo Anti-Frizz</h2>
+    <p>Seleccioná tu color:</p>
+    <select id="selector-cepillo-anti-frizz">
+      <option value="">-- Elegí una opción --</option>
+      <option value="rosa">Rosa</option>
+      <option value="negro">Negro</option>
+      <option value="blanco">Blanco</option>
+    </select>
+
+    <div class="botones-modal">
+      <button onclick="confirmarAgregar('cepillo-anti-frizz', 'Cepillo Anti-Frizz', 4500)">Confirmar y agregar</button>
+      <button onclick="cerrarModal('cepillo-anti-frizz')">Cancelar</button>
+    </div>
+
+    <img src="images/peluqueria/pl1.jpeg" alt="Cepillo Anti-Frizz" class="imagen-grande">
+
+  </div>
+</div>    <!-- Bloque de imagen -->
+    <div class="modal-imagen">
+      <img src="images/peluqueria/pl1.jpeg" alt="Cepillo Anti-Frizz" class="imagen-grande">
+    </div>
+
+  </div>
+</div>
 </body>
 </html>
