--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ Swal.fire({
 <div id="modal-mascara-facial" class="modal modal-producto" style="display:none;">  <div class="modal-contenido">
     <h2>Mascarilla facial</h2>
     <p>Seleccioná tu tipo:</p>
-    <select id="selector-planchita-flequillera">
+    <select id="selector-mascara-facial">
       <option value="">-- Elegí una opción --</option>
       <option value="frutilla">Frutilla</option>
       <option value="la bubu">La Bubu</option>
@@ -816,7 +816,7 @@ Swal.fire({
     </select>
 
     <div class="botones-modal">
-      <button onclick="confirmarAgregar('planchita-flequillera', 'Planchita Flequillera', 4000)">Confirmar y agregar</button>
+      <button onclick="confirmarAgregar('planchita-flequillera', 'planchita flequillera', 4000)">Confirmar y agregar</button>
       <button onclick="cerrarModal('planchita-flequillera')">Cancelar</button>
     </div>
 
@@ -827,7 +827,7 @@ Swal.fire({
 <div id="modal-balsamo-frutal" class="modal modal-producto" style="display:none;">  <div class="modal-contenido">
     <h2>Balsamo Frutal</h2>
     <p>Seleccioná tu gusto:</p>
-    <select id="selector-planchita-flequillera">
+    <select id="selector-balsamo-frutal">
       <option value="">-- Elegí una opción --</option>
       <option value="rosado">Uva</option>
       <option value="negro">Frutilla</option>
