--- a/index.html
+++ b/index.html
@@ -829,10 +829,10 @@ Swal.fire({
     <p>Seleccioná tu gusto:</p>
     <select id="selector-balsamo-frutal">
       <option value="">-- Elegí una opción --</option>
-      <option value="rosado">Uva</option>
-      <option value="negro">Frutilla</option>
-      <option value="blanca">Limon</option>
-      <option value="celeste">Manzana verde</option>
+      <option value="Uva">Uva</option>
+      <option value="frutilla">Frutilla</option>
+      <option value="limon">Limon</option>
+      <option value="manzana verde">Manzana verde</option>
     </select>
 
     <div class="botones-modal">
