--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="#maquillaje">Maquillaje</a>
   <a href="#skincare">Skincare</a>
   <a href="#contacto">Contacto</a>
-  <a href="">Cuidado personal</a>
+  <a href="#cuidado-personal">Cuidado personal</a>
   <a href="">Sahumerios y esencias</a>
   <a href="">Perfumeria</a>
 
@@ -574,6 +574,14 @@
 
     </div>
   </section>
+
+<div id="cuidado-personal" class="titulo-cuidado-personal">
+  <h1>Cuidado Personal</h1>
+  <h4>Hábitos que fortalecen, revitalizan y acompañan tu bienestar cada día</h4>
+  <div class="boton-promocion">
+    <a href="promociones.html">✨ VER PROMOCIONES EXCLUSIVAS ✨</a>
+  </div>
+</div>
 
   <!-- Contacto -->
 <section id="contacto">
