--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <a href="#skincare">Skincare</a>
   <a href="#contacto">Contacto</a>
   <a href="#cuidado-personal">Cuidado personal</a>
-  <a href="">Sahumerios y esencias</a>
+  <a href="#perfumeria">Sahumerios y esencias</a>
   <a href="#perfumeria">Perfumeria</a>
 
 </nav>
