--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
         <h4>Protectores diarios x100u.</h4>
         <p>$2300</p>
           <div class="boton-carrito">
-         <button onclick="agregarAlCarrito('SombrasProtectores diarios x100', 2300)" class="btn">Agregar al carrito</button>  
+         <button onclick="agregarAlCarrito('Protectores diarios x100', 2300)" class="btn">Agregar al carrito</button>  
           </div>
        </div>
       <div class="producto">
