--- a/index.html
+++ b/index.html
@@ -1502,8 +1502,8 @@ Swal.fire({
     <p>Seleccioná tu tipo:</p>
     <select id="selector-hebillas">
       <option value="">-- Elegí una opción --</option>
-      <option value="cuadrado">Cuadrado</option>
-      <option value="oval">Oval.</option>
+      <option value="amarillo">Amarillo</option>
+      <option value="verde">Verde.</option>
     </select>
 
     <div class="botones-modal">
