--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@ Swal.fire({
     </select>
 
     <div class="botones-modal">
-      <button onclick="confirmarAgregar('labial-a', 'labial a', 1200)">Confirmar y agregar</button>
+      <button onclick="confirmarAgregar('labial-a', 'labial ', 1200)">Confirmar y agregar</button>
       <button onclick="cerrarModal('labial-a')">Cancelar</button>
     </div>
 
@@ -1610,7 +1610,7 @@ Swal.fire({
     </select>
 
     <div class="botones-modal">
-      <button onclick="confirmarAgregar('labial-b', 'labial b', 1000)">Confirmar y agregar</button>
+      <button onclick="confirmarAgregar('labial-b', 'labial ', 1000)">Confirmar y agregar</button>
       <button onclick="cerrarModal('labial-b')">Cancelar</button>
     </div>
 
