--- a/index.html
+++ b/index.html
@@ -1502,7 +1502,7 @@ Swal.fire({
     <p>Seleccioná tu tipo:</p>
     <select id="selector-hebillas">
       <option value="">-- Elegí una opción --</option>
-      <option value="amarillo">Amarillo</option>
+      <option value="rosado">Rosado</option>
       <option value="verde">Verde.</option>
     </select>
 
