--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@ Swal.fire({
       <button onclick="cerrarModal('broches')">Cancelar</button>
     </div>
 
-    <img src="images/peluqueria/pl4.jpeg" alt="delineador-de-labios" class="imagen-grande">
+    <img src="images/peluqueria/pl14.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
 
@@ -1493,7 +1493,7 @@ Swal.fire({
       <button onclick="cerrarModal('terminales-trenza')">Cancelar</button>
     </div>
 
-    <img src="images/peluqueria/pl3.jpeg" alt="delineador-de-labios" class="imagen-grande">
+    <img src="images/peluqueria/pl13.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
 
@@ -1511,7 +1511,7 @@ Swal.fire({
       <button onclick="cerrarModal('hebillas')">Cancelar</button>
     </div>
 
-    <img src="images/peluqueria/pl12.jpeg" alt="delineador-de-labios" class="imagen-grande">
+    <img src="images/peluqueria/pl12.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
 
