--- a/clientes.html
+++ b/clientes.html
@@ -11,6 +11,12 @@
     <input type="date" id="fecha" required>
     <button type="submit">Guardar</button>
   </form>
+   <!-- Aquí va la lista -->
+  <h2>Lista de Clientes</h2>
+  <ul id="listaClientes"></ul>
+
+  <!-- Script de Firebase -->
+
 
   <script type="module" src="firebase.js"></script>
 </body>
