--- a/clientes.html
+++ b/clientes.html
@@ -14,10 +14,24 @@
    <!-- Aquí va la lista -->
   <h2>Lista de Clientes</h2>
   <ul id="listaClientes"></ul>
+   <!-- Aquí va la lista -->
 
   <!-- Script de Firebase -->
-
-
   <script type="module" src="firebase.js"></script>
+  <!-- Script de Firebase -->
+  
+  <!-- muestra ventas cerradas -->
+  <div style="display:flex; gap:40px;">
+  <div>
+    <h2>Lista de Clientes</h2>
+    <ul id="listaClientes"></ul>
+  </div>
+  <div>
+    <h2>Lista de Ventas Cerradas</h2>
+    <ul id="listaVentasCerradas"></ul>
+  </div>
+</div>
+  <!-- muestra ventas cerradas -->
+
 </body>
 </html>
